# Approximation_2D

./: .gitignore  Approximation2D.pro  CMakeLists.txt  Dockerfile  Makefile  README.md  algorithm.cpp  common_types.h  function_types.h  gui_main.cpp  main.cpp  moc_predefs.h  reduce_sum.cpp  renderer.cpp  renderer.hpp  solution.cpp  window.cpp  window.hpp
.github/workflows/: ci.yml  docker.yml
scripts/: run_tests.sh
